fix(doom): changing the font size, added new file in org agenda.

--- a/config.org
+++ b/config.org
@@ -5,8 +5,8 @@
 
 #+begin_src emacs-lisp
 
-  (add-to-list 'default-frame-alist '(width  . 85))
-  (add-to-list 'default-frame-alist '(height . 34))
+  (add-to-list 'default-frame-alist '(width  . 80))
+  (add-to-list 'default-frame-alist '(height . 32))
 
 #+end_src
 
@@ -106,8 +106,8 @@ Never lose your cursor.  When you scroll, your cursor will shine!  This is a glo
 
 #+begin_src emacs-lisp
 
-  (setq doom-font (font-spec :family "JetBrains Mono" :weight 'regular :size 15)
-        doom-variable-pitch-font (font-spec :family "Ubuntu" :size 15)
+  (setq doom-font (font-spec :family "JetBrains Mono" :weight 'regular :size 14)
+        doom-variable-pitch-font (font-spec :family "Ubuntu" :size 14)
         doom-big-font (font-spec :family "JetBrains Mono" :size 24))
   (after! doom-themes
     (setq doom-themes-enable-bold t
@@ -168,6 +168,7 @@ Never lose your cursor.  When you scroll, your cursor will shine!  This is a glo
           org-hide-emphasis-markers t)
     (setq org-agenda-files
           '("~/org-files/todo.org"
+            "~/org-files/books.org"
             "~/org-files/school.org"))
 
   (set-face-attribute 'org-document-title nil :font "Agave Nerd Font" :weight 'bold :height 1.3)
