--- a/config.org
+++ b/config.org
@@ -1,6 +1,15 @@
 #+title: My Doom Config
 #+author: Jom Dollesin
 
+* Transparency
+
+#+begin_src emacs-lisp
+
+  (set-frame-parameter (selected-frame) 'alpha '(90 . 90))
+  (add-to-list 'default-frame-alist '(alpha . (90 . 90)))
+
+#+end_src
+
 * Frame width and height
 
 #+begin_src emacs-lisp
@@ -171,15 +180,15 @@ Never lose your cursor.  When you scroll, your cursor will shine!  This is a glo
             "~/org-files/books.org"
             "~/org-files/school.org"))
 
-  (set-face-attribute 'org-document-title nil :font "Agave Nerd Font" :weight 'bold :height 1.3)
-  (dolist (face '((org-level-1 . 1.4)
-                  (org-level-2 . 1.4)
-                  (org-level-3 . 1.4)
-                  (org-level-4 . 1.4)
-                  (org-level-5 . 1.4)
-                  (org-level-6 . 1.4)
-                  (org-level-7 . 1.4)
-                  (org-level-8 . 1.4)))
+  (set-face-attribute 'org-document-title nil :font "Agave Nerd Font" :weight 'medium :height 1.4)
+  (dolist (face '((org-level-1 . 1.3)
+                  (org-level-2 . 1.3)
+                  (org-level-3 . 1.3)
+                  (org-level-4 . 1.3)
+                  (org-level-5 . 1.3)
+                  (org-level-6 . 1.3)
+                  (org-level-7 . 1.3)
+                  (org-level-8 . 1.3)))
     (set-face-attribute (car face) nil :font "Agave Nerd Font" :weight 'medium :height (cdr face))))
 
 #+end_src
