--- a/config.org
+++ b/config.org
@@ -5,8 +5,8 @@
 
 #+begin_src emacs-lisp
 
-  (set-frame-parameter (selected-frame) 'alpha '(90 . 90))
-  (add-to-list 'default-frame-alist '(alpha . (90 . 90)))
+  ;; (set-frame-parameter (selected-frame) 'alpha '(90 . 90))
+  ;; (add-to-list 'default-frame-alist '(alpha . (90 . 90)))
 
 #+end_src
 
